--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "mustache": "^3.0.1",
+    "pixelmatch": "^5.1.0",
+    "pngjs": "^3.4.0",
     "read-files-promise": "^1.1.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
